# missense-kinase-toolkit

./: .codecov.yml  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  CLAUDE.MD  CODE_OF_CONDUCT.md  README.md  pyproject.toml  readthedocs.yml  setup.cfg
missense_kinase_toolkit/databases/: LICENSE  README.md  pyproject.toml
missense_kinase_toolkit/databases/missense_kinase_toolkit/databases/: __init__.py  aligners.py  api_schema.py  cbioportal.py  config.py  hgnc.py  io_utils.py  kinase_schema.py  kincore.py  klifs.py  ncbi.py  pfam.py  pkis2.py  plot.py  protvar.py  uniprot.py  utils.py
missense_kinase_toolkit/databases/missense_kinase_toolkit/databases/tests/: __init__.py  test_database.py  test_databases.py
missense_kinase_toolkit/databases/mkt/databases/: __init__.py  aligners.py  alphafold.py  api_schema.py  cancer_hotspots.py  cbioportal.py  chembl.py  colors.py  config.py  davis.py  hgnc.py  io_utils.py  kinase_schema.py  kincore.py  klifs.py  log_config.py  ml.py  ncbi.py  oncokb.py  oncotree.py  open_targets.py  pfam.py  pkis2.py  plot.py  plot_config.py  properties.py  protvar.py  pymol.py  requests_wrapper.py  sasa.py  scrapers.py  uniprot.py  utils.py  utils_requests.py
missense_kinase_toolkit/databases/mkt/databases/KinCore/: AGC_AKT1_89.69_activePDB_5MSA_ortholog_model2.cif  AGC_AKT2_91.01_activeAF2_20MSA_family_model1.cif  AGC_AKT3_92.34_activeAF2_10MSA_ortholog_model1.cif  AGC_CDC42BPA_91.64_activeAF2_5MSA_family_model2.cif  AGC_CDC42BPB_91.05_activeAF2_5MSA_family_model1.cif  AGC_CDC42BPG_90.98_activeAF2_5MSA_family_model1.cif  AGC_CIT_85.28_activeAF2_60MSA_family_model1.cif  AGC_DMPK_88.87_activeAF2_10MSA_family_model2.cif  AGC_GRK1_94.37_PDB70_10000MSA_uniref90_model2.cif  AGC_GRK2_95.97_activeAF2_60MSA_family_model2.cif  AGC_GRK3_96.62_activeAF2_5MSA_family_model1.cif  AGC_GRK4_95.93_activeAF2_5MSA_ortholog_model1.cif  AGC_GRK5_95.45_activePDB_5MSA_ortholog_model1.cif  AGC_GRK6_95.47_activeAF2_10MSA_family_model1.cif  AGC_GRK7_84.93_activeAF2_5MSA_ortholog_model1.cif  AGC_LATS1_36.25_activeAF2_15MSA_family_model1.cif  AGC_LATS2_38.61_activePDB_20MSA_ortholog_model1.cif  AGC_MAST1_37.75_PDB70_10000MSA_uniref90_model5.cif  AGC_MAST2_40.91_PDB70_10000MSA_uniref90_model3.cif  AGC_MAST3_42.45_PDB70_10000MSA_uniref90_model5.cif  AGC_MAST4_41.74_PDB70_10000MSA_uniref90_model3.cif  AGC_MASTL_25.73_notemp_10000MSA_uniref90_model1.cif  AGC_PDPK1_93.88_activePDB_5MSA_family_model1.cif  AGC_PKN1_96.48_activeAF2_5MSA_ortholog_model1.cif  AGC_PKN2_96.71_activeAF2_5MSA_family_model1.cif  AGC_PKN3_96.93_activeAF2_5MSA_ortholog_model1.cif  AGC_PRKACA_95.48_activeAF2_10MSA_ortholog_model1.cif  AGC_PRKACB_94.24_activePDB_60MSA_family_model1.cif  AGC_PRKACG_94.21_activePDB_5MSA_ortholog_model1.cif  AGC_PRKCA_91.86_activePDB_5MSA_family_model1.cif  AGC_PRKCB_92.99_activeAF2_5MSA_family_model1.cif  AGC_PRKCD_92.19_activeAF2_5MSA_ortholog_model1.cif  AGC_PRKCE_92.03_PDB70_10000MSA_uniref90_model3.cif  AGC_PRKCG_93.42_activeAF2_10MSA_ortholog_model1.cif  AGC_PRKCH_90.85_notemp_10000MSA_uniref90_model1.cif  AGC_PRKCI_93.28_activeAF2_10MSA_family_model1.cif  AGC_PRKCQ_93.39_activeAF2_10MSA_family_model1.cif  AGC_PRKCZ_92.98_activeAF2_5MSA_ortholog_model1.cif  AGC_PRKG1_91.82_PDB70_10000MSA_uniref90_model2.cif  AGC_PRKG2_92.69_activeAF2_10MSA_ortholog_model2.cif  (+398 more)
missense_kinase_toolkit/databases/mkt/databases/app/: __init__.py  properties.py  schema.py  sequences.py  structures.py  utils.py
missense_kinase_toolkit/databases/mkt/databases/cli/: __init__.py  extract_cbioportal_missense_kinases.py  generate_dataset_csv_files.py  generate_kinaseinfo_objects.py  generate_pymol_files.py  plot_dataset_data.py  query_chembl_for_davis_smiles.py
missense_kinase_toolkit/databases/mkt/databases/datasets/: __init__.py  davis.py  discoverx.py  pkis2.py  process.py
missense_kinase_toolkit/databases/mkt/databases/tests/: conftest.py  test_alphafold.py  test_cancer_hotspots.py  test_cbioportal.py  test_chembl.py  test_colors.py  test_config.py  test_databases.py  test_hgnc.py  test_import.py  test_io_utils.py  test_kincore.py  test_klifs.py  test_ncbi.py  test_oncokb.py  test_open_targets.py  test_pfam.py  test_plot.py  test_plot_config.py  test_protvar.py  test_sasa.py  test_scrapers.py  test_uniprot.py  test_utils_requests.py
missense_kinase_toolkit/experiments/: pyproject.toml
missense_kinase_toolkit/experiments/missense_kinase_toolkit/experiments/: __init__.py  plate_reader.py
missense_kinase_toolkit/ml/: MANIFEST.in  README.md  clustering.py  environment.yml  pyproject.toml
missense_kinase_toolkit/ml/esm2/: batch_jobs.csv
missense_kinase_toolkit/ml/mkt/ml/: __init__.py  cluster.py  constants.py  factory.py  finetune.py  log_config.py  plot.py  trainer.py  utils.py  utils_trainer.py  utils_wandb.py
missense_kinase_toolkit/ml/mkt/ml/cli/: clean_datasets.py  create_experiment.py  generate_datasets.py  generate_plots.py  run_trainer.py
missense_kinase_toolkit/ml/mkt/ml/datasets/: davis.py  finetune.py  pkis2.py  process.py
missense_kinase_toolkit/ml/mkt/ml/models/: base_model.py  cross_attention.py  factor_model.py  models.py  pooling.py
missense_kinase_toolkit/ml/src/esm2/: analysis.py  batch_jobs.sh  inference.py  main.py  run.sh  utils.py
missense_kinase_toolkit/schema/: README.md  pyproject.toml
missense_kinase_toolkit/schema/missense_kinase_toolkit/schema/: __init__.py  io_utils.py  kinase_schema.py
missense_kinase_toolkit/schema/mkt/schema/: __init__.py  config.py  constants.py  io_utils.py  kinase_schema.py  utils.py
missense_kinase_toolkit/schema/mkt/schema/KinaseInfo/: A0A0B4J2F2.json  A4QPH2.json  AAK1.json  AATK.json  ABL1.json  ABL2.json  ABR.json  ACVR1.json  ACVR1B.json  ACVR1C.json  ACVR2A.json  ACVR2B.json  ACVRL1.json  ADCK1.json  ADCK2.json  ADCK3.json  ADCK4.json  ADCK5.json  ADRBK1.json  ADRBK2.json  AKT1.json  AKT2.json  AKT3.json  ALK.json  ALPK1.json  ALPK2.json  ALPK3.json  AMHR2.json  ANKK1.json  ARAF.json  ATM.json  ATR.json  AURKA.json  AURKB.json  AURKC.json  AXL.json  B5MCJ9.json  BAZ1A.json  BAZ1B.json  BCKDK.json  (+1033 more)
(+642 files in other folders)
