[tool.poetry]
name = "missense-kinase-toolkit"
# https://github.com/mtkennerly/poetry-dynamic-versioning/issues/14
# https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
version = "0.0.0"
description = "An ETL pipeline package to facilitate structure-based ML for human kinase property prediction"
authors = ["Jess White <jessica.white@choderalab.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/choderalab/missense_kinase_toolkit/"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
packages = [
    {include = "missense_kinase_toolkit", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^69.1.0"
pydantic = ">=1.10,<2"
tqdm = "4.64.0"
pandas = ">=2,<3"
requests = ">=2.28.1,<3"
requests-cache = ">=0.9.7,<1"



[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-runner = "^6.0.1"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+g{{commit}}
    {%- endif -%}
"""
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
